add common queries

--- a/server/index.html
+++ b/server/index.html
@@ -80,9 +80,9 @@
       <div class="row">
 		<div class="col s3">
             <div class="input-field col s12">
-              <button class="btn waves-effect waves-light" form="queryform" type="submit" name="action">Run Query</button>
+              <button class="btn waves-effect waves-light green" form="queryform" type="submit" name="action">Run Query</button>
               <p>
-                <input type="checkbox" class="filled-in" id="fullURI" checked="checked" />
+                <input type="checkbox" class="filled-in" id="fullURI"/>
                 <label for="fullURI">Full URI</label>
               </p>
               <p>
@@ -94,10 +94,10 @@
                     <div class="collapsible-header teal lighten-2" style="color: white">Common Queries<i class="material-icons">expand_more</i></div>
                     <div class="collapsible-body">
                         <ul class="collection">
-                            <a href="#" class="collection-item">Query #1</a>
-                            <a href="#" class="collection-item">Query #2</a>
-                            <a href="#" class="collection-item">Query #3</a>
-                            <a href="#" class="collection-item">Query #4</a>
+                            <a href="#" id="query_vavselect" class="collection-item">VAV Select</a>
+                            <a href="#" id="query_tempselect" class="collection-item">Zone Temperature Sensors</a>
+                            <a href="#" id="query_vavcmd" class="collection-item">VAV Commands</a>
+                            <a href="#" id="query_floors" class="collection-item">Spatial Building Structure</a>
                         </ul>
                     </div>
                 </li>
@@ -182,6 +182,28 @@ SELECT ?vav WHERE {
           $("#queryform").submit(function(event) {
             var querytext = $("#queryarea").val();
             submit_query(querytext);
+            event.preventDefault();
+          });
+
+          $("#query_vavselect").click(function(event) {
+            cm.setValue("SELECT ?vav WHERE {\n\t?vav rdf:type brick:VAV .\n};");
+            cm.setSize("100%", Math.max(200, cm.lineCount()*25));
+            event.preventDefault();
+          });
+          $("#query_tempselect").click(function(event) {
+            cm.setValue("SELECT ?sensor ?room\nWHERE {\n\t?sensor rdf:type/rdfs:subClassOf* brick:Zone_Temperature_Sensor .\n\t?room rdf:type brick:Room .\n\t?vav rdf:type brick:VAV .\n\t?zone rdf:type brick:HVAC_Zone .\n\n\t?vav bf:feeds+ ?zone .\n\t?zone bf:hasPart ?room .\n\t{\n\t\t?sensor bf:isPointOf ?vav .\n\t\tOR\n\t\t?sensor bf:isPointOf ?room . \n\t}\n};");
+            cm.setSize("100%", Math.max(200, cm.lineCount()*25));
+            cm.refresh();
+            event.preventDefault();
+          });
+          $("#query_vavcmd").click(function(event) {
+            cm.setValue("SELECT ?vlv_cmd ?vav\nWHERE {\n\t{\n\t\t?vlv_cmd rdf:type brick:Reheat_Valve_Command .\n\t\tOR\n\t\t?vlv_cmd rdf:type brick:Cooling_Valve_Command .\n\t}\n\t?vav rdf:type brick:VAV .\n\t?vav bf:hasPoint+ ?vlv_cmd .\n};");
+            cm.setSize("100%", Math.max(200, cm.lineCount()*25));
+            event.preventDefault();
+          });
+          $("#query_floors").click(function(event) {
+            cm.setValue("SELECT ?floor ?room ?zone\nWHERE {\n\t?floor rdf:type brick:Floor .\n\t?room rdf:type brick:Room .\n\t?zone rdf:type brick:HVAC_Zone .\n\t?room bf:isPartOf+ ?floor .\n\t?room bf:isPartOf+ ?zone .\n};");
+            cm.setSize("100%", Math.max(200, cm.lineCount()*25));
             event.preventDefault();
           });
     </script>
