structuring the hod pages

--- a/server/query.html
+++ b/server/query.html
@@ -71,10 +71,10 @@
     <div class="container">
       <div>
         <ul id="slide-out" style="width:350px" class="side-nav fixed blue lighten-5">
-            <li><h3>HodDB Query</h3></li>
-            <li><a href="#">Query<i class="material-icons">keyboard_arrow_right</i></a></li>
+            <li><h3 class="center-align" !important>HodDB</h3></li>
+            <li><a href="/query">Query<i class="material-icons">keyboard_arrow_right</i></a></li>
             <li><a href="#">Visualize<i class="material-icons">keyboard_arrow_right</i></a></li>
-            <li><a href="#">Documentation<i class="material-icons">keyboard_arrow_right</i></a></li>
+            <li><a href="/help">Help<i class="material-icons">keyboard_arrow_right</i></a></li>
             <li><hr></li>
             <li><h5>Common Queries</h5></li>
             <li class="collection-item"><a id="query_vavselect" class="listhighlight">VAV Select<i class="material-icons">code</i></a><li>
