--- a/server/visualize.html
+++ b/server/visualize.html
@@ -7,6 +7,8 @@
     <script src="static/addon/edit/matchbrackets.js"></script>
     <script src="static/mode/sparql/sparql.js"></script>
     <script src="static/mode/python/python.js"></script>
+    <script type="text/javascript" src="static/js/vis.min.js"></script>
+    <link href="static/css/vis-network.min.css" rel="stylesheet" type="text/css" />
     <!--Import Google Icon Font-->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
@@ -61,6 +63,11 @@
         .row {
             padding-left: 50px;
         }
+        #mynetwork {
+          width: 100%;
+          height: 400px;
+          border: 1px solid lightgray;
+        }
     </style>
   	<title>HodDB Query</title>
   </head>
@@ -84,24 +91,6 @@
         </ul>
       </div>
       <div class="row">
-        <div class="input-field col s2">
-          <button class="btn waves-effect waves-light green" form="queryform" type="submit" name="action">Run Query</button>
-        </div>
-        <div class="col s2">
-          <p>
-            <input type="checkbox" class="filled-in" id="fullURI"/>
-            <label for="fullURI">Full URI</label>
-          </p>
-        </div>
-        <div class="col s2">
-          <p>
-            <input type="checkbox" class="filled-in" id="showJSON" />
-            <label for="showJSON">Show JSON</label>
-          </p>
-        </div>
-      </div>
-
-      <div class="row">
         <div class="col s12">
           <form id="queryform" form="queryform" class="col s12">
             <textarea id="queryarea" name="queryarea">
@@ -112,18 +101,11 @@ SELECT ?vav WHERE {
         </div>
         <div class="row">
           <div id="errortext" class="col s12 card-panel red lighten-2" hidden>
-          <p></p>
+            <p></p>
           </div>
-        </div>
-      </div>
-      <div class="row">
-        <h4 id="resultsheader" class="col s12" hidden>Results</h4>
-        <div class="col s12" id="elapsed">
-        </div>
-        <div class="col s12">
-          <table class="highlight bordered" id="resultstable"></table>
-        </div>
-        <div class="col s12" id="resultsjson">
+          <div class="col s12">
+            <div id="mynetwork"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -137,45 +119,47 @@ SELECT ?vav WHERE {
           cm.refresh();
 
           var submit_query = function(query) {
-            $("#errortext").hide();
-            $("#resultsjson").hide();
-            $("#resultstable").hide();
-            var useFullURI = $("#fullURI")[0].checked;
-            var showJSON = $("#showJSON")[0].checked;
             var html = "";
             var begin = moment();
-            $.post("/api/query", query, function(data) {
+            console.log(query);
+            $.post("/api/querydot", query, function(data) {
+                console.log(network);
+                if (network != null) {
+                    network.destroy();
+                }
                 var end = moment();
                 var duration = moment.duration(end - begin);
                 $("#elapsed").text(duration.milliseconds() + " ms");
-                $("#resultsheader").show();
-                if (showJSON) {
-                    $("#resultsjson").show();
-                    html = "<code>" + JSON.stringify(data) + "</code>";
-                    $("#resultsjson").html(html);
-                } else if (data.Rows.length > 0) {
-                    $("#resultstable").show();
-                    var firstrow = data.Rows[0];
-                    html += "<thead><tr>";
-                    for (var key in firstrow) {
-                        html += "<td><b>" + key + "</b></td>";
+                console.log(data);
+                var parsedData = vis.network.convertDot(data);
+                var container = document.getElementById('mynetwork');
+                var data = {
+                  nodes: parsedData.nodes,
+                  edges: parsedData.edges
+                };
+                var options = parsedData.options;
+                options.interaction = {
+                  hover: true
+                };
+                options.physics = {
+                  barnesHut: {
+                      springLength: 200,
+                      avoidOverlap: .5,
+                      springConstant: .01
+                  },
+                };
+                options.layout = {
+                    hierarchical: {
+                      enabled: true,
+                      levelSeparation: 200,
+                      nodeSpacing: 200,
+                      edgeMinimization: true,
+                      direction: 'LR'
                     }
-                    html += "</tr></thead><tbody>";
-                    data.Rows.forEach(function(element) {
-                        html += "<tr>"
-                        for (var key in element) {
-                            if (useFullURI) {
-                                var newstuff = element[key].Namespace + "#" + element[key].Value;
-                            } else {
-                                var newstuff = element[key].Value;
-                            }
-                            html += "<td>" + newstuff + "</td>"
-                        }
-                        html += "</tr>"
-                    });
-                    html += "</tbody>";
-                    $("#resultstable").html(html);
-                }
+                };
+
+                var network = new vis.Network(container, data, options);
+                network.redraw();
             }).fail(function(e) {
                 $("#errortext").show();
                 $("#errortext > p").text(e.responseText);
@@ -185,12 +169,13 @@ SELECT ?vav WHERE {
           // init collapsible parts
           $('.collapsible').collapsible();
 
-          // handle querying
-          $("#queryform").submit(function(event) {
-            var querytext = $("#queryarea").val();
-            submit_query(querytext);
-            event.preventDefault();
+          cm.on("change", function(e, x) {
+            submit_query(cm.getValue());
           });
+
+          // run once
+          var querytext = $("#queryarea").val();
+          submit_query(querytext);
 
           $("#query_vavselect").click(function(event) {
             cm.setValue("SELECT ?vav WHERE {\n\t?vav rdf:type brick:VAV .\n};");
