--- a/server/help.html
+++ b/server/help.html
@@ -84,9 +84,14 @@
       </div>
       <div class="row">
         <div class="col s12">
-          <a href="/query"><h3 class="helptitle">Query</h3></a> 
+          <a href="/query"><h3 class="helptitle">Query</h3></a>
           <p>
             Run interactive queries against Hod
+          </p>
+          <a href="/visualize"><h3 class="helptitle">Visualize</h3></a>
+          <p>
+            As you type Hod queries into the editor, this page renders the variables and relationships involved in the query as a directed graph.
+            Variables to be returned are highlighted in red.
           </p>
         </div>
       </div>
