add link to hoddb docs

--- a/server/help.html
+++ b/server/help.html
@@ -84,6 +84,10 @@
       </div>
       <div class="row">
         <div class="col s12">
+          <a href="http://hoddb.org"><h3 class="helptitle">hoddb.org</h3></a>
+          <p>
+            HodDB docs, examples, source code
+          </p>
           <a href="/query"><h3 class="helptitle">Query</h3></a>
           <p>
             Run interactive queries against Hod
