--- a/server/help.html
+++ b/server/help.html
@@ -12,76 +12,22 @@
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="static/css/materialize.min.css"  media="screen,projection"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <style>
-        body {
-            margin:40px auto;
-            line-height:1.6;
-            font-size:18px;
-            font-family: Inconsolata, monospace;
-            color:#444;
-            padding:0 10px;
-            font-weight: 400;
-            line-height: 24px;
-        }
-        h1,h2,h3 {
-            line-height:1.2;
-            color:#333;
-            text-align: left;
-        }
-        a {
-            text-decoration: none;
-        }
-        a:link {
-            color: black;
-        }
-        a:visited {
-            color: black;
-        }
-        a:active {
-            color: black;
-        }
-        a:hover {
-            color: blue;
-            border-bottom:1px dotted black;
-        }
-        .CodeMirror {
-            border-top: 1px solid black;
-            border-bottom: 1px solid black;
-        }
-        #resultstable {
-            font-size: 12px;
-        }
-        .listhighlight:hover {
-            background-color: #eee;
-        }
-        .listhighlight {
-            color: black;
-        }
-        .row {
-            padding-left: 50px;
-        }
-        .helptitle {
-            color: blue;
-            font-size: 30px;
-            border-bottom: 1px solid blue;
-        }
-    </style>
+    <link type="text/css" rel="stylesheet" href="static/css/site.css" />
   	<title>HodDB Query</title>
+    <ul id="slide-out" style="width:350px" class="side-nav fixed blue lighten-5">
+        <li><h3 class="center-align" !important>HodDB</h3></li>
+        <li><a href="/query">Query<i class="material-icons">keyboard_arrow_right</i></a></li>
+        <li><a href="/visualize">Visualize<i class="material-icons">keyboard_arrow_right</i></a></li>
+        <li><a href="/help">Help<i class="material-icons">keyboard_arrow_right</i></a></li>
+    </ul>
+    <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
   </head>
   <body>
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="static/js/materialize.min.js"></script>
+    <main>
     <div class="container">
-      <div>
-        <ul id="slide-out" style="width:350px" class="side-nav fixed blue lighten-5">
-            <li><h3 class="center-align" !important>HodDB</h3></li>
-            <li><a href="/query">Query<i class="material-icons">keyboard_arrow_right</i></a></li>
-            <li><a href="/visualize">Visualize<i class="material-icons">keyboard_arrow_right</i></a></li>
-            <li><a href="/help">Help<i class="material-icons">keyboard_arrow_right</i></a></li>
-        </ul>
-      </div>
       <div class="row">
         <div class="col s12">
           <a href="http://hoddb.org"><h3 class="helptitle">hoddb.org</h3></a>
@@ -100,10 +46,15 @@
         </div>
       </div>
     </div>
+    </main>
 
     <script type="text/javascript">
           // init collapsible parts
           $('.collapsible').collapsible();
+          $('.button-collapse').sideNav({
+            menuWidth: 350, // Default is 240
+            }
+          );
     </script>
   </body>
 </html>
