--- a/server/visualize.html
+++ b/server/visualize.html
@@ -14,82 +14,28 @@
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="static/css/materialize.min.css"  media="screen,projection"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <style>
-        body {
-            margin:40px auto;
-            line-height:1.6;
-            font-size:18px;
-            font-family: Inconsolata, monospace;
-            color:#444;
-            padding:0 10px;
-            font-weight: 400;
-            line-height: 24px;
-        }
-        h1,h2,h3 {
-            line-height:1.2;
-            color:#333;
-            text-align: left;
-        }
-        a {
-            text-decoration: none;
-        }
-        a:link {
-            color: black;
-        }
-        a:visited {
-            color: black;
-        }
-        a:active {
-            color: black;
-        }
-        a:hover {
-            color: blue;
-            border-bottom:1px dotted black;
-        }
-        .CodeMirror {
-            border-top: 1px solid black;
-            border-bottom: 1px solid black;
-        }
-        #resultstable {
-            font-size: 12px;
-        }
-        .listhighlight:hover {
-            background-color: #eee;
-        }
-        .listhighlight {
-            color: black;
-        }
-        .row {
-            padding-left: 50px;
-        }
-        #mynetwork {
-          width: 100%;
-          height: 500px;
-          border: 1px solid lightgray;
-        }
-    </style>
+    <link type="text/css" rel="stylesheet" href="static/css/site.css" />
   	<title>HodDB Query</title>
+    <ul id="slide-out" style="width:350px" class="side-nav fixed blue lighten-5">
+        <li><h3 class="center-align" !important>HodDB</h3></li>
+        <li><a href="/query">Query<i class="material-icons">keyboard_arrow_right</i></a></li>
+        <li><a href="/visualize">Visualize<i class="material-icons">keyboard_arrow_right</i></a></li>
+        <li><a href="/help">Help<i class="material-icons">keyboard_arrow_right</i></a></li>
+        <li><hr></li>
+        <li><h5>Common Queries</h5></li>
+        <li class="collection-item"><a id="query_vavselect" class="listhighlight">VAV Select<i class="material-icons">code</i></a><li>
+        <li class="collection-item"><a id="query_tempselect" class="listhighlight">Zone Temperature Sensors<i class="material-icons">code</i></a><li>
+        <li class="collection-item"><a id="query_vavcmd" class="listhighlight">VAV Commands<i class="material-icons">code</i></a><li>
+        <li class="collection-item"><a id="query_floors" class="listhighlight">Spatial Building Structure<i class="material-icons">code</i></a><li>
+    </ul>
+    <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
   </head>
   <body>
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="static/js/materialize.min.js"></script>
+    <main>
     <div class="container">
-      <div>
-        <ul id="slide-out" style="width:350px" class="side-nav fixed blue lighten-5">
-            <li><h3 class="center-align" !important>HodDB</h3></li>
-            <li><a href="/query">Query<i class="material-icons">keyboard_arrow_right</i></a></li>
-            <li><a href="/visualize">Visualize<i class="material-icons">keyboard_arrow_right</i></a></li>
-            <li><a href="/help">Help<i class="material-icons">keyboard_arrow_right</i></a></li>
-            <li><hr></li>
-            <li><h5>Common Queries</h5></li>
-            <li class="collection-item"><a id="query_vavselect" class="listhighlight">VAV Select<i class="material-icons">code</i></a><li>
-            <li class="collection-item"><a id="query_tempselect" class="listhighlight">Zone Temperature Sensors<i class="material-icons">code</i></a><li>
-            <li class="collection-item"><a id="query_vavcmd" class="listhighlight">VAV Commands<i class="material-icons">code</i></a><li>
-            <li class="collection-item"><a id="query_floors" class="listhighlight">Spatial Building Structure<i class="material-icons">code</i></a><li>
-        </ul>
-      </div>
       <div class="row">
         <div class="col s12">
           <form id="queryform" form="queryform" class="col s12">
@@ -109,6 +55,7 @@ SELECT ?vav WHERE {
         </div>
       </div>
     </div>
+    </main>
     <script type="text/javascript">
           var textarea = document.getElementById("queryarea");
           var cm = CodeMirror.fromTextArea(textarea, {
@@ -162,6 +109,11 @@ SELECT ?vav WHERE {
 
           // init collapsible parts
           $('.collapsible').collapsible();
+
+          $('.button-collapse').sideNav({
+            menuWidth: 350, // Default is 240
+            }
+          );
 
           cm.on("change", function(e, x) {
             submit_query(cm.getValue());
