--- a/server/query.html
+++ b/server/query.html
@@ -17,7 +17,7 @@
     <ul id="slide-out" class="side-nav fixed blue lighten-5">
         <li><h3 class="center-align" !important>HodDB</h3></li>
         <li><a href="/query">Query<i class="material-icons">keyboard_arrow_right</i></a></li>
-        <li><a href="/visualize">Visualize<i class="material-icons">keyboard_arrow_right</i></a></li>
+        <li><a href="/plan">Planner<i class="material-icons">keyboard_arrow_right</i></a></li>
         <li><a href="/help">Help<i class="material-icons">keyboard_arrow_right</i></a></li>
         <li><hr></li>
         <li><h5>Common Queries</h5></li>
@@ -134,7 +134,7 @@ SELECT ?vav WHERE {
                     });
                     html += "</tbody>";
                     $("#resultstable").html(html);
-                    $("#resultsnum").text(number+ " results");
+                    $("#resultsnum").text(number + " results");
                 }
             }).fail(function(e) {
                 $("#errortext").show();
