--- a/server/plan.html
+++ b/server/plan.html
@@ -19,7 +19,7 @@
     <ul id="slide-out" style="width:350px" class="side-nav fixed blue lighten-5">
         <li><h3 class="center-align" !important>HodDB</h3></li>
         <li><a href="/query">Query<i class="material-icons">keyboard_arrow_right</i></a></li>
-        <li><a href="/visualize">Visualize<i class="material-icons">keyboard_arrow_right</i></a></li>
+        <li><a href="/plan">Planner<i class="material-icons">keyboard_arrow_right</i></a></li>
         <li><a href="/help">Help<i class="material-icons">keyboard_arrow_right</i></a></li>
         <li><hr></li>
         <li><h5>Common Queries</h5></li>
