add LIMIT to the query page

--- a/server/query.html
+++ b/server/query.html
@@ -58,7 +58,7 @@
             <textarea id="queryarea" name="queryarea">
 SELECT ?vav WHERE {
     ?vav rdf:type brick:VAV .
-};</textarea>
+} LIMIT 500;</textarea>
           </form>
         </div>
         <div class="row">
