--- a/server/help.html
+++ b/server/help.html
@@ -16,9 +16,9 @@
   	<title>HodDB Query</title>
     <ul id="slide-out" style="width:350px" class="side-nav fixed blue lighten-5">
         <li><h3 class="center-align" !important>HodDB</h3></li>
-        <li><a href="/query">Query<i class="material-icons">keyboard_arrow_right</i></a></li>
-        <li><a href="/plan">Planner<i class="material-icons">keyboard_arrow_right</i></a></li>
-        <li><a href="/help">Help<i class="material-icons">keyboard_arrow_right</i></a></li>
+        <li><a class="tooltipped" data-position="right" data-delay="100" data-tooltip="Execute BRICK queries" href="/query">Query<i class="material-icons">keyboard_arrow_right</i></a></li>
+        <li><a class="tooltipped" data-position="right" data-delay="100" data-tooltip="Visualize the construction of BRICK queries" href="/plan">Planner<i class="material-icons">keyboard_arrow_right</i></a></li>
+        <li class="active"><a class="tooltipped" data-position="right" data-delay="100" data-tooltip="Documentation and other resources" href="/help">Help<i class="material-icons">keyboard_arrow_right</i></a></li>
     </ul>
     <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
   </head>
