--- a/server/help.html
+++ b/server/help.html
@@ -8,7 +8,7 @@
     <script src="static/mode/sparql/sparql.js"></script>
     <script src="static/mode/python/python.js"></script>
     <!--Import Google Icon Font-->
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="static/css/materialize.min.css"  media="screen,projection"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
