--- a/server/plan.html
+++ b/server/plan.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="static/js/vis.min.js"></script>
     <link href="static/css/vis-network.min.css" rel="stylesheet" type="text/css" />
     <!--Import Google Icon Font-->
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="static/css/materialize.min.css"  media="screen,projection"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
