make sure to load over https

--- a/server/explore.html
+++ b/server/explore.html
@@ -9,7 +9,7 @@
     <script src="static/mode/python/python.js"></script>
     <script src="static/js/dotgraph/js/dotparser.js"></script>
     <script src="static/js/dotgraph/js/dotgraph.js"></script>
-    <script src="http://d3js.org/d3.v2.min.js?2.9.3"></script>
+    <script src="https://d3js.org/d3.v2.min.js?2.9.3"></script>
 
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
